Refining HTML and adding css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>anne s k frontend developer</title>
+  <title>anne sk | frontend developer</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -28,6 +28,8 @@
   <meta name="theme-color" content="#fafafa">
 
   <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200;300;500;600;700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -35,64 +37,232 @@
 
 <body>
   <div class="content-wrapper" aria-label="welcome">
+    <header>
 
-    <section aria-label="navigation">
-      <nav>
-        <!-- nav for accessiblity: about, projects, skills, BUTTON with hover:contact -->
-      </nav>
+      <section aria-label="introduction to Anne">
+        <h1>Anne<br><span>Spitler-Kashuba</span></h1>
+        <h2>a frontend developer <br>
+          <span>accessibility<br>
+            &amp; great design.</span>
+        </h2>
+      </section>
+
+      <section aria-label="navigation">
+        <nav>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skillset">Skillset</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </section>
+
+    </header>
+  </div>
+  <!-- end of header content wrapper -->
+
+  <main>
+    <article>
+      <section class="work" aria-label="recent projects">
+        <!-- project section with links to live sites -->
+        <h3 class="portfolio-title">Projects</h3>
+        <div class="project-wrapper">
+
+          <div class="portfolio-piece">
+            <figure>
+              <a href="" target="_blank">
+                <img src="img/sticky-app.png" alt="Sticky Note App">
+              </a>
+            </figure>
+            <h4>Sticky Note App</h4>
+            <p>An interactive note-taking application that lets users create, edit, and save or delete notes “sticky
+              notes” over time.</p>
+            <p>Built with React, JSX, and Components, including managing data flow and manimulating the DOM.</p>
+            <p>Tools: CodeSandBox.
+            </p>
+            <button></button>
+          </div>
+
+          <div class="portfolio-piece">
+            <figure>
+              <a href="https://wesiptea.github.io/guess-the-word/
+              ">
+                <img src="img/guess-word.png" alt="Guess the Word Game">
+              </a>
+            </figure>
+            <h4>Guess the Word Game</h4>
+            <p>A word guessing game in which a user needs to guess the correct letters before their guesses run out and
+              the game ends!
+            </p>
+            <p>Built in JavaScript including manipulating the DOM and pulling data from APIs.</p>
+            <p>Tools: GitHub.</p>
+            <button></button>
+          </div>
+
+          <div class="portfolio-piece">
+            <figure>
+              <a href="https://wesiptea.github.io/github-repo-gallery/" target="_blank">
+                <img src="img/github-gallery.png" alt="GitHub Repository Gallery">
+              </a>
+            </figure>
+            <h4>GitHub Repo Gallery</h4>
+            <p>A searchable gallery of repositories stored on GitHub. Visitors can click to view repo details and code.
+            </p>
+            <p>Built using JavaScript, including manipulation of the DOM, and GitHub's API to pull data from my
+              portfolio on GitHub and create a searchable gallery.</p>
+            <p>Tools: Git and GitHub</p>
+            <button></button>
+          </div>
+
+          <div class="portfolio-piece">
+            <figure>
+              <a href="https://wesiptea.github.io/unplugged-retreat-updated/" target="_blank">
+                <img src="img/unplugged-img.png" alt="unplugged retreats website">
+              </a>
+            </figure>
+            <h4>Unplugged Retreats</h4>
+            <p>A multi-page responsive website</p>
+            <p>Built with HTML5, CSS3 (including Flexbox), Responsive Media Queries and
+              Typography.</p>
+            <p>Tools: Photoshop design comp, Chrome DevTools, GitHub Pages</p>
+            <button></button>
+          </div>
+
+        </div>
+      </section>
+      <!-- end of projects section -->
+    </article>
+
+    <section class="skillset" alt="my skillset">
+      <!-- additional information about abilities - tech and soft? -->
+      <h3>Skillset</h3>
+      <ul>
+        <li>HTML5 | </li>
+        <li>CSS3 |</li>
+        <li>JavaScript |</li>
+        <li>React |</li>
+        <li>Git &amp; GitHub |</li>
+        <li>Command Line |</li>
+        <li>Chrome DevTools |</li>
+        <li>Responsive, Mobile First Design |</li>
+        <li>CodeSandBox |</li>
+        <li>Photoshop |</li>
+        <li>Illustrator |</li>
+        <li>Google Docs |</li>
+        <li>Slack |</li>
+      </ul>
+
+      <h3>Additional Skills</h3>
+      <ul>
+        <li>Client Relations &amp; Helping Clients Reach their Goals</li>
+        <li>Collaborative &amp; Creative Problem-Solving</li>
+        <li>Working Remotely</li>
+        <li>Applying Research to Practice</li>
+        <li>Analytical Skills</li>
+        <li>Program Managment</li>
+        <li>Scheduling &amp; Leading Meetings</li>
+      </ul>
     </section>
 
-    <section aria-label="introduction to Anne">
-      <header class="introduction">
-        <h1>Hello, I'm Anne.</h1>
-        <h3>I am a frontend developer.</h3>
-        <!-- end of content-wrapper div -->
-      </header>
-      <!-- end of header -->
+    <!-- end of skillset -->
 
-    </section>
+    <section class="about" aria-label="about">
+      <!-- monochrome image -->
+      <img src="img/portrait-monochrome.png" aria-label="image of Anne">
+      <h3>About</h3>
 
-    <section class="about" aria-label="about me">
-      <!-- quick intro content -->
-      <h2>About Me</h2>
-      <p>Making things well brings me joy. I am focused on writing clean code and building websites that are accessible
-        to
-        everyone. Sites that are well-crafted and user-friendly are more likely to be successful. Let's work together to
-        connect you to your community!
+      <h4><span>Hello, my name is Anne Spitler-Kashuba living in the beautiful redwood forest region of Sonoma County,
+          California.</span>I'm a frontend developer.</h4>
+
+      <p> I began my professional life in merchandising and logo design. Transitioned to working with children with
+        communication and literacy difficulties as speech-language pathologist. Now, I am glad to be bringing all of my
+        knowledge and experiences to building websites and helping organizations communicate with their community.</p>
+      <p>
+        My aim is to help teams create and maintain websites that are
+        well-crafted from the inside out. Clear,
+        responsive code behind the scenes &amp;
+        accessible content onscreen.</p>
+      <p>
+        I am looking for a diverse team whose members enjoy the creative process, appreciate how differing approaches
+        and perspectives can make projects even stronger, and value knowledge-sharing and life-long learning.
       </p>
+      <p>
+        I bring a diverse set of abilities developed while working in the healthcare and education settings, combined
+        with a life-long passion for
+        the arts and making.</p>
+      <p>
+        My jam: making and enjoying tasty food, learning languages, collecting textiles,
+        and making art.</p>
 
+      <p>Personal goal: visiting as many fantastic bakeries as possible around the world. (If you have bakery
+        recommendations
+        to share, please do!)</p>
     </section>
     <!-- end of about section -->
+  </main>
 
-    <section class="projects" aria-label="recent projects">
-      <!-- project section with links to live sites -->
-      <h2>Recent Projects</h2>
+  <footer class="contact" aria-label="contact">
+    <!-- footer with contact info and icon links -->
+    <!-- contact links: email, phone, twitter, github, LinkedIn) -->
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <h3>Let's Connect</h3>
 
-    </section>
-    <!-- end of projects section -->
+        <div class="contact">
+          <h3>Contact Me</h3>
+          <address>
+            <p>
+              call | text | WhatsApp - 01+916-425-7235<br>
+              anne.sk.dev@gmail.com
+            </p>
+          </address>
+        </div>
+
+        <div class="social">
+          <h4>Connect with Me</h4>
+
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/skillcrush" target="_blank">
+                <div class="circle"><i class="fa-brands fa-facebook-f"></i></div>
+              </a>
+            </p>
+
+            <p>
+              <a href="https://twitter.com/skillcrush" target="_blank">
+                <div class="circle"><i class="fa-brands fa-twitter"></i></div>
+              </a>
+            </p>
+
+            <p>
+              <a href="https://www.instagram.com/skillcrush/" target="_blank">
+                <div class="circle"><i class="fa-brands fa-instagram"></i></div>
+              </a>
+            </p>
+          </div>
+        </div>
+        <!--end of social div-->
+
+      </div>
+    </div>
+    <!--end of footer content-wrapper-->
+
+    <div class="copyright">
+      <p>Copyright 2022 | Anne Spitler-Kashuba</p>
+    </div>
 
 
-    <section class="skills" aria-label="my skillset">
-      <!-- additional information about abilities - tech and soft? -->
-      <h2>Diverse skillset</h2>
-    </section>
-    <!-- end of skillset section -->
+  </footer>
+  <!-- end of footer -->
 
-    <footer class="contact" aria-label="contact me">
-      <!-- footer with contact info and icon links -->
-      <h2>Let's work together.</h2>
-    </footer>
-    <!-- end of footer -->
 
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
-
-  </div>
-  <!-- end of page content wrapper -->
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
 
 </body>
 
