Updates to css, img, index.html

--- a/index.html
+++ b/index.html
@@ -83,9 +83,15 @@
         <h4>Sticky Note App</h4>
         <p>An interactive note-taking application that lets users create, edit, and save or delete notes “sticky
           notes” over time.</p>
-        <p>Built with React, JSX, and Components, including managing data flow and manimulating the DOM.</p>
+        <!-- <p>Built with React, JSX, and Components, including managing data flow and maninpulating the DOM.</p>
         <p>Tools: CodeSandBox.
-        </p>
+        </p> -->
+        <div>
+          <button class="button-skills" role="button">React</button>
+          <button class="button-skills" role="button">JSX</button>
+        </div>
+
+        <!-- javascript needed -->
         <button class="button-52" role="button">Live Page</button>
       </div>
 
@@ -96,29 +102,42 @@
           </a>
         </figure>
         <h4>GitHub Repo Gallery</h4>
-        <p>A searchable gallery of repositories stored on GitHub. Visitors can click to view repo details and
+        <p>A searchable repository gallery stored on GitHub. Visitors can click to view repo details and
           code.
         </p>
-        <p>Built using JavaScript, including manipulation of the DOM, and GitHub's API to pull data from my
+        <!-- <p>Built using JavaScript, including manipulation of the DOM, and GitHub's API to pull data from my
           portfolio on GitHub and create a searchable gallery.</p>
-        <p>Tools: Git and GitHub</p>
+        <p>Tools: Git and GitHub</p> -->
+        <div>
+          <button class="button-skills" role="button">VanillaJS</button>
+          <button class="button-skills" role="button">API</button>
+          <button class="button-skills" role="button">GitHub</button>
+        </div>
+
+        <!-- javascript needed -->
         <button class="button-52" role="button">Live Page</button>
       </div>
 
       <div class="portfolio-piece">
         <figure>
-          <a href="https://wesiptea.github.io/guess-the-word/
-              ">
+          <a href="https://wesiptea.github.io/guess-the-word/" target="_blank">
             <img src="img/guess-word.png" alt="Guess the Word Game">
           </a>
         </figure>
         <h4>Guess the Word Game</h4>
-        <p>A word guessing game in which a user needs to guess the correct letters before their guesses run out
+        <p>A user guesses the correct letters before their guesses run out
           and
           the game ends!
         </p>
-        <p>Built in JavaScript including manipulating the DOM and pulling data from APIs.</p>
-        <p>Tools: GitHub.</p>
+        <!-- <p>Built in JavaScript including manipulating the DOM and pulling data from APIs.</p>
+        <p>Tools: GitHub.</p> -->
+        <div>
+          <button class="button-skills" role="button">VanillaJS</button>
+          <button class="button-skills" role="button">API</button>
+          <button class="button-skills" role="button">GitHub</button>
+        </div>
+
+        <!-- javascript needed -->
         <button class="button-52" role="button">Live Page</button>
       </div>
 
@@ -130,9 +149,16 @@
         </figure>
         <h4>Unplugged Retreats</h4>
         <p>A multi-page responsive website developed from a Photoshop design comp.</p>
-        <p>Built with HTML5, CSS3 (including Flexbox), Responsive Media Queries and
+        <!-- <p>Built with HTML5, CSS3 (including Flexbox), Responsive Media Queries and
           Typography.</p>
-        <p>Tools: Photoshop design comp, Chrome DevTools, GitHub Pages</p>
+        <p>Tools: Photoshop design comp, Chrome DevTools, GitHub Pages</p> -->
+        <div>
+          <button class="button-skills" role="button">HTML5</button>
+          <button class="button-skills" role="button">CSS3</button>
+          <button class="button-skills" role="button">Flexbox</button>
+        </div>
+
+        <!-- javascript needed -->
         <button class="button-52" role="button">Live Page</button>
       </div>
 
@@ -165,12 +191,12 @@
 
     <div>
       <h3>Additional Skills</h3>
-      <ul class="additional-skills" id="additional">
-        <li>Client Relations &amp; Helping Clients Reach their Goals</li>
-        <li>Collaborative &amp; Creative Problem-Solving</li>
+      <ul class="skills" id="additional">
+        <li>Client Relations</li>
+        <li>Collaborative Problem-Solving</li>
         <li>Working Remotely</li>
-        <li>Applying Research to Practice</li>
-        <li>Analytical Skills</li>
+        <li>Applying Research</li>
+        <li>Analytical &amp; Flexible Mindset</li>
         <li>Program Managment</li>
         <li>Scheduling &amp; Leading Meetings</li>
       </ul>
@@ -183,28 +209,28 @@
     <img src="img/portrait-500px.png" class="portrait-photo" id="portrait" aria-label="portrait of Anne">
 
     <div class="about-container">
-      <h4>Hi, my name is Anne Spitler-Kashuba. I'm a frontend developer living in West Sonoma
+      <h4>Hi, my name is Anne Spitler-Kashuba. I'm a frontend developer living in Western Sonoma
         County, California.</h4>
 
       <p>
         I want to help teams create and maintain websites that are
         well-crafted from the inside out. Clear,
-        responsive code behind the scenes &amp;
+        responsive code behind the scenes and
         accessible content onscreen.</p>
       <p>
         I am looking for a diverse team whose members enjoy the creative process, appreciate how differing approaches
         and perspectives make outcomes stronger, and value knowledge-sharing and life-long learning.
       </p>
       <p>
-        I bring a diverse set of abilities developed while working in the healthcare and education settings, combined
+        I bring a diverse set of personal and professional abilities developed while working in healthcare and
+        education settings, combined
         with a life-long passion for
         the arts and making things.</p>
       <p>
-        My jam: making and enjoying tasty food, learning languages, collecting textiles,
+        When I'm not coding, I'm making and enjoying tasty food, learning languages, collecting textiles,
         and making art.</p>
 
-      <p>Personal goal: visiting as many fantastic bakeries as possible around the world.<br>
-        (Bakery recommendations
+      <p>Personal goal: visiting as many fantastic bakeries as possible around the world. (Bakery recommendations
         are welcome!)</p>
     </div>
   </section>
