Updates to breakpoints

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <p>
         I bring a diverse set of personal and professional abilities developed while working in healthcare and
         education settings, combined
-        with a life-long passion for
+        with a life-long love for
         the arts and making things.</p>
       <p>
         When I'm not coding, I'm making and enjoying tasty food, learning languages, collecting textiles,
