Update to index.html text

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         When I'm not coding, I'm making and enjoying tasty food, learning languages, collecting textiles,
         and making art.</p>
 
-      <p>Personal goal: visiting as many fantastic bakeries as possible around the world. (Bakery recommendations
+      <p>Personal goal: visiting as many wonderful bakeries as possible around the world. (Bakery recommendations
         are welcome!)</p>
     </div>
   </section>
