Edit text of about section index.html

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         County, California.</h4>
 
       <p>
-        I want to help teams create and maintain websites that are
+        My goal is to help build and maintain sites that are
         well-crafted from the inside out. Clear,
         responsive code behind the scenes and
         accessible content onscreen.</p>
